# rusty-blockparser

./: Cargo.toml
src/: errors.rs  main.rs
src/blockchain/: mod.rs
src/blockchain/db/: kv.rs
src/blockchain/parser/: chain.rs  mod.rs  types.rs  worker.rs
src/blockchain/proto/: block.rs  header.rs  mod.rs  script.rs  tx.rs  varuint.rs
src/blockchain/utils/: blkfile.rs  csv.rs  mod.rs  reader.rs
src/callbacks/: clusterizer.rs  csvdump.rs  mod.rs  stats.rs  utxodump.rs
src/types/: union.rs
