[package]
name = "rusty-blockparser"
version = "0.6.1"
authors = ["gcarq <michael.egger@tsn.at>", "Michele Spagnuolo <mikispag@gmail.com>", "Age Manning <Age@AgeManning.com>"]
edition = "2018"
include = ["src/*", "LICENSE", "README.md", "Cargo.toml"]
description = "Multithreaded Blockchain Parser for most common Cryptocurrencies based on Bitcoin"
documentation = "https://github.com/gcarq/rusty-blockparser/blob/master/README.md"
homepage = "https://github.com/gcarq/rusty-blockparser/"
readme = "README.md"
keywords = ["Cryptocurrency", "Bitcoin", "Litecoin", "Blockchain", "Parser"]
license = "GPL-3.0"

[dependencies]
csv             = "1.1.3"
log             = "0.4.8"
clap            = "2.33.0"
rust-crypto     = "0.2.36"
rustc-serialize = "0.3.24"
byteorder       = "1.3.4"
rust-base58     = "0.0.4"
seek_bufread    = "1.2.2"
twox-hash       = "1.5.0"
chrono = "0.4.11"
dirs = "2.0.2"
simple_logger = "1.6.0"
itertools = "0.9.0"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 3                # Controls the --opt-level the compiler builds with
debug = true                 # Controls whether the compiler passes `-g`
rpath = false                # Controls whether the compiler passes `-C rpath`
lto = false                  # Controls `-C lto` for binaries and staticlibs
debug-assertions = true      # Controls whether debug assertions are enabled
codegen-units = 1            # Controls whether the compiler passes `-C codegen-units`
                             # `codegen-units` is ignored when `lto = true`

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

# The testing profile, used for `cargo test`
[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

# The benchmarking profile, used for `cargo bench`
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

# The documentation profile, used for `cargo doc`
[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
